Added styles and game logic for rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -1,27 +1,62 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Piedra, Papel o Tijera</title>
+    <title>Rock Paper Scissors - Bootstrap Layout</title>
+    <!-- Bootstrap CSS desde la carpeta local -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/styles.css" rel="stylesheet">
 </head>
-<body>
-    <h1>Juega Piedra, Papel o Tijera</h1>
-    <form action="/play" method="POST">
-        <label for="choice">Elige:</label>
-        <select name="choice" id="choice">
-            <option value="Piedra">Piedra</option>
-            <option value="Papel">Papel</option>
-            <option value="Tijera">Tijera</option>
-        </select>
-        <button type="submit">Jugar</button>
-    </form>
+<body class="container text-center">
 
-    {{if .PlayerChoice}}
-    <h2>Resultado del juego:</h2>
-    <p>Tú elegiste: {{.PlayerChoice}}</p>
-    <p>La IA eligió: {{.AIChoice}}</p>
-    <p>{{.Result}}</p>
-    {{end}}
+    <!-- Título y Puntaje -->
+    <div class="row">
+        <div class="col-12">
+            <h1 class="my-4">Rock Paper Scissors</h1>
+        </div>
+        <div class="col-12">
+            <div class="score-board mb-4">Score: Player 0 - AI 0</div>
+        </div>
+    </div>
+
+    <!-- Mano de la IA (estilo de abanico) -->
+    <div class="row justify-content-center">
+        <div class="hand-container ai-hand">
+            <div class="card-game">❓</div>
+            <div class="card-game">❓</div>
+            <div class="card-game">❓</div>
+        </div>
+    </div>
+
+    <!-- Tablero de Juego -->
+    <div class="row justify-content-center mt-4">
+        <div class="col-6 col-md-4 d-flex justify-content-center">
+            <div class="played-card" id="aiCard">❓</div>
+        </div>
+        <div class="col-12 mt-4">
+            <div class="result-message" id="resultMessage">Result Here</div>
+        </div>
+        <div class="col-6 col-md-4 d-flex justify-content-center">
+            <div class="played-card" id="playerCard">❓</div>
+        </div>
+    </div>
+
+    <!-- Mano del Jugador (estilo de abanico) -->
+    <div class="row justify-content-center mt-5">
+        <div class="hand-container player-hand">
+            <div class="card-game" onclick="chooseCard('Rock')">🪨</div>
+            <div class="card-game" onclick="chooseCard('Paper')">📄</div>
+            <div class="card-game" onclick="chooseCard('Scissors')">✂️</div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS, Popper.js y jQuery desde la carpeta local -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Custom JS -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
